--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,3 +8,7 @@ on:
 jobs:
   common-pr:
     uses: GateNLP/gate-top/.github/workflows/standard-module-pr.yml@master
+    with:
+      # Full rather than shallow clone
+      fetch_depth: "0"
+
